# NetGraph-Core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml  wheels.yml
bindings/python/: module.cpp
dev/: compare_flow_policy_with_netgraph.py  run-checks.sh
include/netgraph/core/: algorithms.hpp  backend.hpp  error.hpp  flow.hpp  flow_graph.hpp  flow_policy.hpp  flow_state.hpp  k_shortest_paths.hpp  max_flow.hpp  options.hpp  shortest_paths.hpp  strict_multidigraph.hpp  types.hpp
python/netgraph_core/: __init__.py  _docs.py  _version.py
src/: cpu_backend.cpp  flow_graph.cpp  flow_policy.cpp  flow_state.cpp  k_shortest_paths.cpp  max_flow.cpp  shortest_paths.cpp  strict_multidigraph.cpp
tests/cpp/: flow_graph_tests.cpp  flow_policy_tests.cpp  flow_state_tests.cpp  k_shortest_paths_tests.cpp  max_flow_tests.cpp  negative_safety_tests.cpp  shortest_paths_tests.cpp  smoke_test.cpp  strict_multidigraph_tests.cpp  test_utils.hpp
tests/py/: conftest.py  test_api_validation.py  test_batch_max_flow_consistency.py  test_batch_max_flow_core.py  test_batch_max_flow_masks.py  test_cost_distribution_core.py  test_edge_cases.py  test_ext_edge_ids.py  test_flow_policy.py  test_flow_policy_lifecycle.py  test_graph_compaction_core.py  test_graph_from_arrays.py  test_imports.py  test_ksp.py  test_ksp_variants.py  test_lifetime_safety.py  test_mask_validation.py  test_masking_comprehensive.py  test_max_flow.py  test_max_flow_analytics.py  test_max_flow_batch.py  test_max_flow_core.py  test_max_flow_cost_distribution.py  test_max_flow_square4_core.py  test_max_flow_summary.py  test_paths_resolve.py  test_policy_vs_maxflow_equivalence.py  test_sensitivity.py  test_spf_basic.py  test_spf_edge_select.py  test_spf_equivalence.py  test_spf_masks.py  test_spf_masks_core.py  test_spf_shapes_core.py
